; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/usb/extr_quirks.c_snd_usb_endpoint_start_quirk.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/usb/extr_quirks.c_snd_usb_endpoint_start_quirk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_usb_endpoint = type { i64, i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@SND_USB_ENDPOINT_TYPE_SYNC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @snd_usb_endpoint_start_quirk(%struct.snd_usb_endpoint* %0) #0 {
  %2 = alloca %struct.snd_usb_endpoint*, align 8
  store %struct.snd_usb_endpoint* %0, %struct.snd_usb_endpoint** %2, align 8
  %3 = load %struct.snd_usb_endpoint*, %struct.snd_usb_endpoint** %2, align 8
  %4 = getelementptr inbounds %struct.snd_usb_endpoint, %struct.snd_usb_endpoint* %3, i32 0, i32 2
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @le16_to_cpu(i32 %10)
  %12 = icmp eq i32 %11, 9146
  br i1 %12, label %13, label %22

13:                                               ; preds = %1
  %14 = load %struct.snd_usb_endpoint*, %struct.snd_usb_endpoint** %2, align 8
  %15 = getelementptr inbounds %struct.snd_usb_endpoint, %struct.snd_usb_endpoint* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @SND_USB_ENDPOINT_TYPE_SYNC, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %13
  %20 = load %struct.snd_usb_endpoint*, %struct.snd_usb_endpoint** %2, align 8
  %21 = getelementptr inbounds %struct.snd_usb_endpoint, %struct.snd_usb_endpoint* %20, i32 0, i32 1
  store i32 4, i32* %21, align 8
  br label %22

22:                                               ; preds = %19, %13, %1
  ret void
}

declare dso_local i32 @le16_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
